# neo-localmcp

./: .coverage  .gitignore  .gitleaks.toml  AGENTS.md  CLAUDE.md  MCP_AGENT_INTEGRATION.md  PROJECT_NOTES.md  PROJECT_STATUS.md  README v2.md  README.md  SETUP_V2_DESIGN.md  V4_1_CHANGES.md  V4_2_1_CHANGES.md  V4_2_2_CHANGES.md  V4_2_3_CHANGES.md  V4_2_4_CHANGES.md  V4_2_5_CHANGES.md  V4_2_CHANGES.md  V4_CHANGES.md  commenting_style_demo.md  install.ps1  install.sh  pyproject.toml  setup.ps1  setup.py  setup_v2.py  setup_wizard.py  uninstall.ps1  uninstall.sh
.codex/: config.toml
.githooks/: pre-commit
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  meta_decision.yml
.github/workflows/: pr-title.yml  setup-v2.yml
_LegacyInstallers/: install.ps1  uninstall.sh  upgrade_cycle_legacy.py
docs/: 1.0.10_PLAN.md  1.0.10_PLAN_COMPLETED.md  1.0.10_PLAN_DUO.md  1.0.10_PLAN_PENDING.md  1.0.7_PLAN.md  1.0.9_PLAN.md  1.1.0_PLAN.md  1.1.1_PLAN.md  1.2.0_PLAN.md  1.2.1_MANUAL_OS_TESTING.md  1.2.1_PLAN.md  1.2.2_PLAN.md  AGENT_INTEGRATION.md  ARCHITECTURE.md  CODE_QUALITY_AUDIT.md  IMPLEMENTATION_PLAN.md  dogfooding-notes-issue-10.md  dogfooding-notes-issue-7.md  dogfooding-notes-issue-8.md  mcp-perf-log-issue-10.md
docs/diagrams/: neo-localmcp-context-flow-v1.drawio
docs/superpowers/plans/: 2026-07-04-ci-phase-0-docs-skip.md  2026-07-04-ci-phase-1-parallel-split.md  2026-07-04-ci-phase-2-wheelhouse.md  2026-07-05-ci-stdio-xdist-isolation.md  2026-07-06-cli-wizard-parity.md  2026-07-06-installer-mcp-reorg.md
docs/superpowers/specs/: 2026-07-03-setup-wizard-tui-design.md  2026-07-04-ci-speed-design.md  2026-07-04-wizard-mcpb-build-design.md  2026-07-04-wizard-preview-dummy-mode-design.md  2026-07-06-cli-wizard-parity-design.md  2026-07-06-installer-mcp-reorg-design.md  2026-07-06-live-agent-comparison-design.md
mermaid_diagrams/: 20260706_installer_wizard_after.mmd  20260706_installer_wizard_before.mmd  20260706_mcp_commands_after.mmd  20260706_mcp_commands_before.mmd
neo_localmcp/: __init__.py  ai_client_config.py  benchmark.py  cli.py  client_setup.py  config.py  context_worker.py  identity.py  lifecycle.py  mcp_server_lifecycle.py  mcpb_build.py  neo.toml  ollama_client.py  query.py  repo_memory.py  repo_utils.py  runtime_cli.py  server.py  setup_cli.py  tools.py  utils.py
neo_localmcp/benchmark_queries/: default.jsonl
neo_localmcp/benchmarker/: __init__.py
neo_localmcp/benchmarker/queries/: default.jsonl
neo_localmcp/installer/: __init__.py  cli.py  clients.py  mcpb.py  migration.py  model_recommendations.py  ollama.py  operations.py  output.py  path.py  paths.py  processes.py  runtime.py  state.py  types.py  verification.py
neo_localmcp/installer/wizard/: _ansi.py  backend.py  console.py  live_backend.py  preflight.py  preview_backend.py
neo_localmcp/mcp/: __init__.py  _shared.py  context_worker.py  editing.py  memory.py  ollama.py  server.py  system.py
neo_localmcp/mcp_commands/: __init__.py  _shared.py  editing.py  memory.py  ollama.py  system.py
neo_localmcp/retrieval/: __init__.py  query.py  repo_memory.py
neo_localmcp/wizard/: __init__.py  app.py  backend.py  console.py  fake_backend.py  preflight.py  real_backend.py
neo_localmcp/wizard/screens/: __init__.py  clients.py  common.py  confirm.py  home.py  ollama.py  progress.py  uninstall.py
scripts/: build-mcpb.ps1  build-mcpb.sh  cleanup-old-neo-mcp.ps1  cleanup-old-neo-mcp.sh  cleanup_old_neo_mcp.py
tests/: conftest.py  test_benchmark.py  test_build_scripts.py  test_ci_configuration.py  test_cigate_selftest.py  test_client_removal.py  test_context.py  test_distribution.py  test_lifecycle.py  test_markdown_headings.py  test_mcp_server_lifecycle.py  test_mcpb_build.py  test_ollama_client.py  test_repo_memory.py  test_repo_utils.py  test_retrieval_memory.py  test_schema_migration.py  test_semantic_ranking.py  test_upgrade_cycle.py  test_utils.py  test_wizard.py
tests/installer/: __init__.py  test_clients.py  test_config_paths.py  test_linux_lifecycle.py  test_macos_lifecycle.py  test_migration.py  test_model_recommendations.py  test_ollama.py  test_ollama_shutdown.py  test_operations.py  test_output.py  test_path.py  test_paths.py  test_processes.py  test_runtime.py  test_setup_cli.py  test_state.py  test_types.py  test_verification.py  test_windows_lifecycle.py
(+9 files in other folders)
