[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neo-localmcp"
version = "1.0.10"
description = "Agent-ready deterministic repo context for Claude/Codex with local Ollama-assisted preprocessing."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "neo-localmcp" }]
license = { text = "MIT" }
dependencies = [
  "mcp[cli]>=1.27,<2",
  "psutil>=5.9,<8"
]

[project.optional-dependencies]
test = ["pytest>=8.0"]
# Guided terminal installer (`python setup_wizard.py`). psutil is already a
# runtime dependency; textual is the TUI toolkit the wizard draws with. Kept out
# of the base dependencies so the headless server/CLI never pulls in a UI stack.
wizard = ["textual>=0.60,<7", "psutil>=5.9,<8"]

[project.scripts]
neo-localmcp = "neo_localmcp.cli:main"
neo-localmcp-server = "neo_localmcp.server:main"

[tool.pytest.ini_options]
markers = [
  "slow: real runtime/lifecycle integration tests",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["neo_localmcp*"]

[tool.setuptools.package-data]
neo_localmcp = ["neo.toml", "templates/claude-code/commands/neo-localmcp/*.md"]
