[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neo-localmcp"
version = "1.0.10"
description = "Agent-ready deterministic repo context for Claude/Codex with local Ollama-assisted preprocessing."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "neo-localmcp" }]
license = { text = "MIT" }
dependencies = [
  "mcp[cli]>=1.27,<2",
  "psutil>=5.9,<8"
]

[project.optional-dependencies]
# pytest-xdist parallelizes the suite across CPU cores (-n auto). Measured ~5x
# faster locally on Windows (~165s -> ~34s) with no isolation failures across
# repeated runs; the tests already isolate via tmp_path fixtures.
test = ["pytest>=8.0", "pytest-xdist>=3.0"]
# Guided terminal installer (`python setup_wizard.py`). It is a plain stdlib
# numbered wizard, so its only dependency is psutil, which is already a base
# runtime dependency. The extra exists so `pip install -e ".[wizard]"` is a
# valid, self-documenting command; it pulls in nothing extra.
wizard = ["psutil>=5.9,<8"]

[project.scripts]
neo-localmcp = "neo_localmcp.cli:main"
neo-localmcp-server = "neo_localmcp.server:main"

[tool.pytest.ini_options]
markers = [
  "slow: real runtime/lifecycle integration tests",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["neo_localmcp*"]

[tool.setuptools.package-data]
neo_localmcp = ["neo.toml", "templates/claude-code/commands/neo-localmcp/*.md"]
